--- a/src/styles/components/buttons.css
+++ b/src/styles/components/buttons.css
@@ -13,11 +13,24 @@
   white-space: nowrap;
 }
 
+.external-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--color-dark-blue);
+  border: 1px solid #A0B3D1;
+  width: 56px;
+  padding: 10px;
+  border-radius: 100px;
+  transition: all 300ms ease;
+}
+
 /* ============================================= Все эффекты наведения и фокуса ============================================= */
 .btn-orange:active {
   border: 1px solid var(--color-blue);
   background-color: var(--color-blue);
 }
+
 
 @media (hover: hover) and (pointer: fine) {
   .btn-orange:hover {
