--- a/src/styles/components/buttons.css
+++ b/src/styles/components/buttons.css
@@ -13,12 +13,27 @@
   white-space: nowrap;
 }
 
+.btn-fiord {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 16px 12px;
+  border-radius: 5px;
+  background-color: var(--color-fiord);
+  border: 1px solid transparent;
+  transition: all 300ms ease;
+  color: var(--color-white);
+  width: min-content;
+  flex-shrink: 0;
+  white-space: nowrap;
+}
+
 .external-link {
   display: flex;
   align-items: center;
   justify-content: center;
   background-color: var(--color-dark-blue);
-  border: 1px solid #A0B3D1;
+  border: 1px solid #a0b3d1;
   width: 56px;
   padding: 10px;
   border-radius: 100px;
@@ -26,16 +41,25 @@
 }
 
 /* ============================================= Все эффекты наведения и фокуса ============================================= */
+@media (hover: hover) and (pointer: fine) {
+  .btn-orange:hover {
+    border: 1px solid var(--color-blue);
+    background-color: #f5f5f5;
+    color: var(--color-blue);
+  }
+
+  .btn-fiord:hover {
+    background-color: var(--color-orange);
+  }
+}
+
 .btn-orange:active {
   border: 1px solid var(--color-blue);
   background-color: var(--color-blue);
 }
 
-
-@media (hover: hover) and (pointer: fine) {
-  .btn-orange:hover {
-    border: 1px solid var(--color-blue);
-    background-color: #F5F5F5;
-    color: var(--color-blue);
-  }
+.btn-fiord:active {
+  border-color: var(--color-blue);
+  background-color: var(--color-white);
+  color: var(--color-blue);
 }
