--- a/src/styles/settings/base.css
+++ b/src/styles/settings/base.css
@@ -52,11 +52,8 @@ body {
   font-weight: 300;
   color: var(--color-black);
   user-select: none;
-  background-color: #F1F6FB;
-}
-
-body::-webkit-scrollbar {
-  display: none;
+  background-color: #f1f6fb;
+  overflow-x: hidden;
 }
 
 main {
@@ -105,4 +102,37 @@ a {
   text-decoration: none;
   color: inherit;
   outline: none;
+}
+
+@media (hover: none) and (pointer: coarse) {
+  /* Весь скроллбар */
+  *::-webkit-scrollbar {
+    display: none;
+  }
+}
+
+@media (hover: hover) and (pointer: fine) {
+  /* Весь скроллбар */
+  *::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+    background: var(--color-white);
+  }
+
+  /* Дорожка скроллбара (фон) */
+  *::-webkit-scrollbar-track {
+    background: var(--color-white);
+  }
+
+  /* Ползунок (перетаскиваемая часть) */
+  *::-webkit-scrollbar-thumb {
+    background: #4a5f8f;
+    border-radius: 6px;
+    border: 2px solid var(--color-white);
+    transition: all 300ms ease;
+  }
+
+  *::-webkit-scrollbar-thumb:hover {
+    background: #26314d;
+  }
 }
