--- a/src/styles/settings/typography.css
+++ b/src/styles/settings/typography.css
@@ -24,14 +24,14 @@ h3 {
 /* size: 16px-32px line-height: 24px-36px */
 .caption--500 {
   font-size: clamp(1rem, 0.7573rem + 1.0356vw, 2rem);
-  line-height: clamp(1.5rem, 1.3180rem + 0.7767vw, 2.25rem);
+  line-height: clamp(1.5rem, 1.318rem + 0.7767vw, 2.25rem);
   font-weight: 500;
 }
 
 /* size: 16px-32px line-height: 24px-36px */
 .caption--400 {
   font-size: clamp(1rem, 0.7573rem + 1.0356vw, 2rem);
-  line-height: clamp(1.5rem, 1.3180rem + 0.7767vw, 2.25rem);
+  line-height: clamp(1.5rem, 1.318rem + 0.7767vw, 2.25rem);
   font-weight: 400;
 }
 
@@ -78,4 +78,8 @@ h3 {
 
 .text--white {
   color: var(--color-white);
+}
+
+.text-fiord {
+  color: var(--color-fiord);
 }
