--- a/src/styles/settings/common.css
+++ b/src/styles/settings/common.css
@@ -6,3 +6,4 @@
 @import url('../components/header.css');
 @import url('../components/footer.css');
 @import url('../components/buttons.css');
+@import url('../components/breadcrumbs.css');
