--- a/src/styles/components/footer.css
+++ b/src/styles/components/footer.css
@@ -3,11 +3,11 @@
   flex-direction: column;
   color: var(--color-white);
   position: static;
-  z-index: 101;
+  z-index: 4;
 
   /* 20px-40px */
   border-radius: clamp(1.25rem, 0.9466rem + 1.2945vw, 2.5rem) clamp(1.25rem, 0.9466rem + 1.2945vw, 2.5rem) 0 0;
-  background: linear-gradient(0deg, #2C4B83 0%, var(--color-bluish-grey) 100%);
+  background: linear-gradient(0deg, #2c4b83 0%, var(--color-bluish-grey) 100%);
 }
 
 .footer__content {
@@ -49,7 +49,9 @@
 }
 
 .footer-logo-item {
-  transition: opacity 0.5s ease, transform 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+  transition:
+    opacity 0.5s ease,
+    transform 0.5s cubic-bezier(0.4, 0, 0.2, 1);
   will-change: transform, opacity;
 }
 
@@ -68,7 +70,6 @@
   transition: all 400ms ease;
   cursor: pointer;
 }
-
 
 .footer__content__partners__pagination__dot.active {
   width: 32px;
@@ -208,7 +209,7 @@
 
 .footer__menu-bottom__owner-rights .text-light-blue {
   transition: all 300ms ease;
-  color: #8BE8F7;
+  color: #8be8f7;
 }
 
 .footer nav ul li a {
@@ -273,7 +274,6 @@
     display: contents;
   }
 }
-
 
 @media (width <=1440px) {
   .footer__content {
