--- a/src/styles/pages/index.css
+++ b/src/styles/pages/index.css
@@ -1,7 +1,7 @@
 main {
   display: flex;
   flex-direction: column;
-  background-color: #F1F6FB;
+  background-color: #f1f6fb;
 }
 
 /* ============================================= Блок 1: Главный экран ============================================= */
@@ -91,7 +91,9 @@ main {
 .home__main-screen__controls button {
   z-index: 4;
   cursor: pointer;
-  transition: transform 200ms ease-in-out, opacity 200ms ease-in-out;
+  transition:
+    transform 200ms ease-in-out,
+    opacity 200ms ease-in-out;
 
   /* 46px-92px */
   width: clamp(2.875rem, 2.1772rem + 2.9773vw, 5.75rem);
@@ -147,7 +149,7 @@ main {
   grid-template-columns: repeat(auto-fill, minmax(clamp(9.375rem, 5.4915rem + 16.5696vw, 25.375rem), 1fr));
 
   /* 50px 15px 50px 15px - 50px 85px 150px 85px */
-  padding: 50px clamp(0.938rem, -0.1239rem + 4.5307vw, 5.313rem) clamp(3.125rem, 1.6080rem + 6.4725vw, 9.375rem);
+  padding: 50px clamp(0.938rem, -0.1239rem + 4.5307vw, 5.313rem) clamp(3.125rem, 1.608rem + 6.4725vw, 9.375rem);
 }
 
 .home__company {
@@ -208,7 +210,6 @@ main {
   background: linear-gradient(180deg, #fff0 0%, #262d49bb 100%);
 }
 
-
 /* ============================================= Блок 3: Экология ============================================= */
 .home__ecology {
   display: flex;
@@ -218,7 +219,7 @@ main {
   gap: clamp(1.875rem, 0.8131rem + 4.5307vw, 6.25rem);
 
   /* 50px 15px 50px 15px - 50px 85px 150px 85px */
-  padding: 50px clamp(0.938rem, -0.1239rem + 4.5307vw, 5.313rem) clamp(3.125rem, 1.6080rem + 6.4725vw, 9.375rem);
+  padding: 50px clamp(0.938rem, -0.1239rem + 4.5307vw, 5.313rem) clamp(3.125rem, 1.608rem + 6.4725vw, 9.375rem);
 }
 
 .home__ecology__card-image {
@@ -281,94 +282,9 @@ main {
   flex-direction: column;
 
   /* 10px-15px */
-  gap: clamp(0.625rem, 0.5490rem + 0.3241vw, 0.938rem);
+  gap: clamp(0.625rem, 0.549rem + 0.3241vw, 0.938rem);
   list-style-type: disc;
   list-style-position: inside;
-}
-
-.home__ecology__our-works-video {
-  position: relative;
-
-  /* 345px-639px */
-  width: clamp(21.563rem, 17.1030rem + 19.0291vw, 39.938rem);
-
-  /*  182px-336px */
-  height: clamp(11.375rem, 9.0388rem + 9.9676vw, 21rem);
-}
-
-.home__ecology__our-works-video video {
-  flex-shrink: 0;
-  object-fit: cover;
-  clip-path: polygon(100% 69.521%, 100% 69.521%, 99.989% 70.069%, 99.955% 70.609%, 99.899% 71.141%, 99.821% 71.66%, 99.723% 72.166%, 99.604% 72.656%, 99.465% 73.127%, 99.307% 73.578%, 99.129% 74.005%, 98.933% 74.407%, 86.491% 97.989%, 86.491% 97.989%, 86.28% 98.359%, 86.056% 98.693%, 85.819% 98.992%, 85.573% 99.253%, 85.316% 99.478%, 85.051% 99.663%, 84.779% 99.809%, 84.501% 99.915%, 84.218% 99.978%, 83.932% 100%, 3.703% 100%, 3.703% 100%, 3.115% 99.91%, 2.558% 99.648%, 2.037% 99.23%, 1.562% 98.669%, 1.14% 97.98%, 0.778% 97.176%, 0.483% 96.273%, 0.263% 95.283%, 0.126% 94.222%, 0.078% 93.104%, 0.078% 6.897%, 0.078% 6.897%, 0.126% 5.778%, 0.263% 4.717%, 0.483% 3.727%, 0.778% 2.824%, 1.14% 2.02%, 1.562% 1.331%, 2.037% 0.77%, 2.558% 0.352%, 3.115% 0.09%, 3.703% 0%, 96.375% 0%, 96.375% 0%, 96.963% 0.09%, 97.521% 0.352%, 98.041% 0.77%, 98.516% 1.331%, 98.938% 2.02%, 99.301% 2.824%, 99.595% 3.727%, 99.815% 4.717%, 99.953% 5.778%, 100% 6.897%, 100% 69.521%);
-
-  /* 345px-639px */
-  width: clamp(21.563rem, 17.1030rem + 19.0291vw, 39.938rem);
-
-  /*  182px-336px */
-  height: clamp(11.375rem, 9.0388rem + 9.9676vw, 21rem);
-}
-
-.home__ecology__our-works-video__info {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  display: flex;
-  align-items: center;
-
-  /*  285px-395px */
-  max-width: clamp(17.813rem, 16.1443rem + 7.1197vw, 24.688rem);
-  width: 100%;
-  padding: 12px 16px;
-
-  /* 10px-20px */
-  gap: clamp(0.625rem, 0.4733rem + 0.6472vw, 1.25rem);
-  border-radius: 30px;
-  background-color: #fffc;
-  cursor: pointer;
-  transition: all 300ms ease;
-}
-
-.home__ecology__our-works-video__info .home__ecology__our-works-video__info__icon {
-  flex-shrink: 0;
-
-  /* 36px-65px */
-  width: clamp(2.25rem, 1.8100rem + 1.8775vw, 4.063rem);
-}
-
-.home__ecology__our-works-video--modal {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #F1F6FBC2;
-  display: none;
-  align-items: center;
-  justify-content: center;
-  z-index: 100;
-}
-
-.home__ecology__our-works-video--modal-content {
-  display: flex;
-  flex-direction: column;
-  gap: 12px;
-  align-items: center;
-  border-radius: 20px;
-}
-
-.home__ecology__our-works-video--modal video {
-  /* 345px-1270px */
-  width: clamp(21.563rem, 7.5310rem + 59.8700vw, 79.375rem);
-
-  /* 182px-744px */
-  height: clamp(11.375rem, 2.8495rem + 36.3754vw, 46.5rem);
-  border-radius: 20px;
-  object-fit: cover;
-}
-
-.home__ecology__our-works-video--modal-close {
-  align-self: flex-end;
 }
 
 /* ============================================= Блок 4: Новости ============================================= */
@@ -380,7 +296,7 @@ main {
   gap: clamp(1.875rem, 1.5716rem + 1.2945vw, 3.125rem);
 
   /* 0 15px 50px 15px - 0 85px 150px 85px */
-  padding: 0 clamp(0.938rem, -0.1239rem + 4.5307vw, 5.313rem) clamp(3.125rem, 1.6080rem + 6.4725vw, 9.375rem);
+  padding: 0 clamp(0.938rem, -0.1239rem + 4.5307vw, 5.313rem) clamp(3.125rem, 1.608rem + 6.4725vw, 9.375rem);
 }
 
 .home__news-title {
@@ -388,10 +304,6 @@ main {
   gap: 10px;
   justify-content: space-between;
   align-items: flex-end;
-}
-
-.home__news-title h2 {
-  color: var(--color-fiord);
 }
 
 .home__news-title__controls {
@@ -418,116 +330,27 @@ main {
   transition: all 300ms ease;
 }
 
-.home__news-cards {
-  display: flex;
-  flex-wrap: nowrap;
-  gap: 20px;
-  padding-bottom: 6px;
-  overflow-x: auto;
-  scrollbar-width: none;
-}
-
-.home__news-card__date {
-  /* 15px-30px */
-  padding-left: clamp(0.938rem, 0.7106rem + 0.9704vw, 1.875rem);
-}
-
-.home__news-wrapper-card {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  flex-shrink: 0;
-}
-
-.home__news-card {
-  display: flex;
-  flex-direction: column;
-  background-color: var(--color-light-blue);
-  flex-grow: 1;
-  overflow: clip;
-  transition: all 300ms ease;
+.home__news-title__controls__arrow {
   cursor: pointer;
-
-  /* 256px-416px */
-  width: clamp(16rem, 13.5728rem + 10.3560vw, 26rem);
-
-  /* 15px-20px */
-  border-radius: clamp(0.938rem, 0.8623rem + 0.3231vw, 1.25rem);
-}
-
-.home__news-card__image {
-  position: relative;
-  width: 100%;
-
-  /* 166px-200px */
-  height: clamp(10.375rem, 9.8592rem + 2.2006vw, 12.5rem);
-  overflow: hidden;
-}
-
-.home__news-card__image::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(180deg, #6896c400 0%, #6896c4cc 100%);
-  pointer-events: none;
-  z-index: 1;
-}
-
-.home__news-card__image::after {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  opacity: 0;
-  transition: opacity 0.3s ease;
-  pointer-events: none;
-  z-index: 2;
-}
-
-.home__news-card img {
-  object-fit: cover;
-  width: 100%;
-  height: 100%;
-}
-
-.home__news-card__content {
-  display: flex;
-  flex-direction: column;
-
-  /* 15px-30px */
-  gap: clamp(0.938rem, 0.7106rem + 0.9704vw, 1.875rem);
-
-  /* 15px-32px */
-  padding: clamp(0.938rem, 0.6802rem + 1.0998vw, 2rem);
-}
-
-.home__news-card__tags {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 10px;
-}
-
-.home__news-card__tag {
+  padding: 0;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 5px 10px;
-  color: var(--color-white);
-  background-color: var(--color-blue);
-  border-radius: 5px;
+  transition: opacity 300ms ease;
 }
 
-.home__news-card__info {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  gap: 10px;
+.home__news-title__controls__arrow:disabled {
+  cursor: not-allowed;
+  pointer-events: none;
+  opacity: 0.5;
+}
 
+.home__news-title__controls__arrow:disabled path {
+  fill: var(--color-light-fiord);
+}
+
+.home__news-title__controls__arrow:not(:disabled) path {
+  fill: var(--color-orange);
 }
 
 /* ============================================= Блок 5: Цитаты ============================================= */
@@ -553,7 +376,7 @@ main {
   padding: clamp(1.875rem, 1.57rem + 1.29vw, 3.125rem) clamp(0.9375rem, -1.52rem + 10.49vw, 11.0625rem);
 
   /* 4px-125px */
-  gap: clamp(0.25rem, -1.59rem + 7.83vw, 7.8125rem)
+  gap: clamp(0.25rem, -1.59rem + 7.83vw, 7.8125rem);
 }
 
 .home__quotes__container button {
@@ -598,7 +421,7 @@ main {
   height: 100px;
 }
 
-.home__quote>p {
+.home__quote > p {
   max-width: 774px;
 }
 
@@ -632,7 +455,7 @@ main {
   overflow: hidden;
 
   /* 50px 15px - 150px 85px */
-  padding: clamp(3.125rem, 1.6080rem + 6.4725vw, 9.375rem) clamp(0.938rem, -0.1239rem + 4.5307vw, 5.313rem);
+  padding: clamp(3.125rem, 1.608rem + 6.4725vw, 9.375rem) clamp(0.938rem, -0.1239rem + 4.5307vw, 5.313rem);
 }
 
 .home__gallery__content {
@@ -778,7 +601,6 @@ main {
   z-index: 1;
 }
 
-
 /* ============================================= Все эффекты наведения и фокуса (hover focus active) ============================================= */
 @media (hover: hover) and (pointer: fine) {
   .home__company:hover {
@@ -787,19 +609,6 @@ main {
 
   .home__company:hover .external-link {
     box-shadow: 0 4px 0 0 var(--color-orange);
-  }
-
-  .home__ecology__our-works-video__info:hover {
-    background-color: var(--color-white);
-  }
-
-  .home__news-card:hover {
-    box-shadow: 0 6px 0 0 var(--color-orange);
-  }
-
-  .home__news-card:hover .home__news-card__image::after {
-    opacity: 1;
-    background: linear-gradient(180deg, #6896c400 50%, #fd5d39cc 100%);
   }
 
   .home__news-title__controls__arrow:hover path {
@@ -846,18 +655,6 @@ main {
 
 .home__company:active .external-link {
   box-shadow: 0 4px 0 0 var(--color-orange);
-}
-
-.home__ecology__our-works-video__info:active {
-  background-color: var(--color-white);
-}
-
-.home__news-card:active {
-  box-shadow: 0 6px 0 0 var(--color-blue);
-}
-
-.home__news-card:active .home__news-card__image::after {
-  opacity: 0;
 }
 
 .home__news-title__controls__all-news:active a {
@@ -937,28 +734,6 @@ main {
   }
 }
 
-@media (width <=1100px) and (hover: hover) {
-  .home__ecology__our-works-video {
-    width: 100%;
-    height: auto;
-  }
-
-  .home__ecology__our-works-video video {
-    width: 100%;
-    height: auto;
-  }
-
-  .home__ecology__our-works-video--modal-content {
-    height: auto;
-    width: calc(100% - clamp(0.938rem, -0.1239rem + 4.5307vw, 5.313rem));
-  }
-
-  .home__ecology__our-works-video--modal-content video {
-    height: auto;
-    width: calc(100% - clamp(0.938rem, -0.1239rem + 4.5307vw, 5.313rem));
-  }
-}
-
 @media (width <=1200px) and (hover: hover) {
   .home__gallery__main {
     height: auto;
@@ -989,26 +764,6 @@ main {
 }
 
 @media (hover: none) and (pointer: coarse) {
-  .home__ecology__our-works-video {
-    width: 100%;
-    height: auto;
-  }
-
-  .home__ecology__our-works-video video {
-    width: 100%;
-    height: auto;
-  }
-
-  .home__ecology__our-works-video--modal-content {
-    width: 90%;
-    height: auto;
-  }
-
-  .home__ecology__our-works-video--modal-content video {
-    width: 90%;
-    height: auto;
-  }
-
   .home__news-title__controls__arrow {
     display: none;
   }
@@ -1086,17 +841,5 @@ main {
 
   .home__gallery__info {
     flex: auto;
-  }
-}
-
-@media (hover: none) and (orientation: landscape) {
-  .home__ecology__our-works-video--modal-content {
-    height: 85%;
-    width: auto;
-  }
-
-  .home__ecology__our-works-video--modal-content video {
-    height: 85%;
-    width: auto;
   }
 }
