--- a/src/styles/settings/common.css
+++ b/src/styles/settings/common.css
@@ -7,3 +7,6 @@
 @import url('../components/footer.css');
 @import url('../components/buttons.css');
 @import url('../components/breadcrumbs.css');
+@import url('../components/video.css');
+@import url('../components/swipe.css');
+@import url('../components/cards.css');
