--- a/src/styles/settings/common.css
+++ b/src/styles/settings/common.css
@@ -10,3 +10,4 @@
 @import url('../components/video.css');
 @import url('../components/swipe.css');
 @import url('../components/cards.css');
+@import url('../components/gallery.css');
