--- a/src/styles/pages/home/ecology.css
+++ b/src/styles/pages/home/ecology.css
@@ -55,6 +55,7 @@
   justify-content: space-between;
   background-color: var(--color-white);
   color: var(--color-black);
+  width: 100%;
 
   /* 30px-129px */
   gap: 30px clamp(1.875rem, 0.37rem + 6.41vw, 8.0625rem);
