--- a/src/styles/components/cards.css
+++ b/src/styles/components/cards.css
@@ -110,6 +110,53 @@
   gap: 10px;
 }
 
+/* ============================================= Карточки вакансий ============================================= */
+.cards-vacancies {
+  display: flex;
+  flex-wrap: nowrap;
+  gap: 20px;
+  padding-bottom: 6px;
+  overflow-x: auto;
+  scrollbar-width: none;
+}
+
+.card-vacancy {
+  flex-shrink: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  cursor: pointer;
+  border: 1px solid var(--color-blue);
+  max-width: max-content;
+  transition: all 300ms ease;
+
+  /* 284px-560px */
+  width: clamp(17.75rem, 13.56rem + 17.86vw, 35rem);
+
+  /* 15px-20px */
+  padding: clamp(0.938rem, 0.8623rem + 0.3231vw, 1.25rem);
+
+  /* 15px-20px */
+  border-radius: clamp(0.938rem, 0.8623rem + 0.3231vw, 1.25rem);
+
+  /* 30px-50px */
+  gap: clamp(1.875rem, 1.5716rem + 1.2945vw, 3.125rem);
+}
+
+.card-vacancy__info {
+  display: flex;
+  flex-direction: column;
+
+  /* 15px-20px */
+  gap: clamp(0.938rem, 0.8623rem + 0.3231vw, 1.25rem);
+}
+
+.card-vacancy__skills {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
 /* ============================================= Все эффекты наведения и фокуса (hover focus active) ============================================= */
 @media (hover: hover) and (pointer: fine) {
   .card-news:hover {
@@ -120,6 +167,15 @@
     opacity: 1;
     background: linear-gradient(180deg, #6896c400 50%, #fd5d39cc 100%);
   }
+
+  .card-vacancy:hover {
+    background-color: var(--color-blue);
+    color: var(--color-white);
+  }
+
+  .card-vacancy:hover .link-blue {
+    color: #8be8f7;
+  }
 }
 
 .card-news:active {
@@ -128,4 +184,9 @@
 
 .card-news:active .card-news__image::after {
   opacity: 0;
+}
+
+.card-vacancy:active {
+  background-color: var(--color-dark-blue);
+  color: var(--color-white);
 }
