Сделал страницу структура компании

--- a/src/styles/components/breadcrumbs.css
+++ b/src/styles/components/breadcrumbs.css
@@ -7,6 +7,13 @@
   width: max-content;
 }
 
+.breadcrumbs--without-bg {
+  display: flex;
+  gap: 5px;
+  padding: 6px 0;
+  width: max-content;
+}
+
 .breadcrumb__active {
   color: var(--color-black);
   cursor: pointer;
