--- a/src/styles/components/buttons.css
+++ b/src/styles/components/buttons.css
@@ -80,7 +80,8 @@
   }
 
   .link-blue:hover {
-    color: var(--color-orange);
+    color: var(--color-dark-blue);
+    text-decoration: underline;
   }
 }
 
@@ -104,4 +105,5 @@
 
 .link-blue:active {
   color: var(--color-orange);
+  text-decoration: underline;
 }
