--- a/src/styles/components/footer.css
+++ b/src/styles/components/footer.css
@@ -1,3 +1,4 @@
+/* ============================================= Подробный подвал с синим фоном ============================================= */
 .footer {
   display: flex;
   flex-direction: column;
@@ -180,7 +181,7 @@
 .footer__menu-top {
   display: flex;
   flex-wrap: wrap;
-  align-items: flex-end;
+  align-items: center;
   justify-content: space-between;
   gap: 15px;
 }
@@ -201,7 +202,7 @@
 
 .footer__menu-top__contacts {
   display: flex;
-  align-items: flex-end;
+  align-items: center;
   white-space: nowrap;
 
   /* 20px-48px */
@@ -255,6 +256,103 @@
   transition: all 300ms ease;
 }
 
+/* ============================================= Урезанный подвал без фона ============================================= */
+.footer--without-bg {
+  display: flex;
+  flex-direction: column;
+  color: var(--color-fiord);
+  position: static;
+  z-index: 4;
+}
+
+.footer--without-bg nav ul li a {
+  transition: all 300ms ease;
+}
+
+.footer--without-bg__menu {
+  display: flex;
+  flex-direction: column;
+
+  /* 0px 15px 30px 15px - 25px 85px 25px 85px */
+  padding: clamp(0rem, -0.3792rem + 1.6181vw, 1.5625rem) clamp(0.9375rem, -0.1244rem + 4.5307vw, 5.3125rem) clamp(1.875rem, 1.9508rem + -0.3236vw, 1.5625rem);
+
+  /* 30px-40px */
+  gap: clamp(1.875rem, 1.7233rem + 0.6472vw, 2.5rem);
+}
+
+.footer--without-bg__menu-top {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  gap: 15px;
+}
+
+.footer--without-bg__menu-top ul {
+  display: flex;
+  flex-wrap: wrap;
+
+  /* 15px-30px */
+  gap: clamp(0.938rem, 0.7106rem + 0.9704vw, 1.875rem);
+}
+
+.footer--without-bg__menu-top__contacts {
+  display: flex;
+  align-items: center;
+  white-space: nowrap;
+
+  /* 20px-48px */
+  gap: clamp(1.25rem, 0.8252rem + 1.8123vw, 3rem);
+}
+
+.footer--without-bg__menu-top__contacts__messengers {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.footer--without-bg__menu-top__contacts__messengers svg {
+  cursor: pointer;
+}
+
+.footer--without-bg__menu-top__contacts__messengers path {
+  transition: all 300ms ease;
+}
+
+.footer--without-bg__separate {
+  width: 100%;
+  height: 1px;
+  background-color: var(--color-fiord);
+}
+
+.footer--without-bg__menu-bottom {
+  display: flex;
+  flex-direction: column;
+
+  /* 30px-40px */
+  gap: clamp(1.875rem, 1.7233rem + 0.6472vw, 2.5rem);
+}
+
+.footer--without-bg__menu-bottom ul {
+  display: flex;
+  flex-wrap: wrap;
+
+  /* 15px-30px */
+  gap: clamp(0.938rem, 0.7106rem + 0.9704vw, 1.875rem);
+}
+
+.footer--without-bg__menu-bottom__owner-rights {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  order: 3;
+}
+
+.footer--without-bg__menu-bottom__owner-rights .text-light-blue {
+  transition: all 300ms ease;
+}
+
 /* ============================================= Все эффекты наведения и фокуса (hover focus active) ============================================= */
 @media (hover: hover) and (pointer: fine) {
   .footer__content__partners__buttons button:hover .footer__content__partners__buttons__background {
@@ -266,11 +364,23 @@
     color: var(--color-orange);
   }
 
+  .footer--without-bg nav ul li:hover a {
+    color: var(--color-orange);
+  }
+
   .footer__menu-bottom__owner-rights a:hover .text-light-blue {
     color: var(--color-orange);
   }
 
+  .footer--without-bg__menu-bottom__owner-rights a:hover .text-light-blue {
+    color: var(--color-orange);
+  }
+
   .footer__menu-top__contacts__messengers a:hover path {
+    fill: var(--color-orange);
+  }
+
+  .footer--without-bg__menu-top__contacts__messengers a:hover path {
     fill: var(--color-orange);
   }
 
@@ -297,11 +407,23 @@
   color: var(--color-orange);
 }
 
+.footer--without-bg nav ul li:active a {
+  color: var(--color-orange);
+}
+
 .footer__menu-bottom__owner-rights a:active .text-light-blue {
   color: var(--color-orange);
 }
 
+.footer--without-bg__menu-bottom__owner-rights a:active .text-light-blue {
+  color: var(--color-orange);
+}
+
 .footer__menu-top__contacts__messengers a:active path {
+  fill: var(--color-orange);
+}
+
+.footer--without-bg__menu-top__contacts__messengers a:active path {
   fill: var(--color-orange);
 }
 
@@ -324,8 +446,19 @@
     justify-content: space-between;
   }
 
+  .footer--without-bg__menu-top__contacts {
+    order: 2;
+    width: 100%;
+    justify-content: space-between;
+  }
+
   .footer__menu-top,
   .footer__menu-bottom {
+    display: contents;
+  }
+
+  .footer--without-bg__menu-top,
+  .footer--without-bg__menu-bottom {
     display: contents;
   }
 }
